--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ select:focus {
 
   <!-- NEW YEAR MESSAGE AT BOTTOM - SMALLER -->
   <div class="new-year-message">
-    Gōngxǐ fācái • Xīnnián kuàilè • Good Fortune & Happiness
+     Gōng Xǐ Fā Cái! ❤︎ Wishing You Prosperity! ❤︎ Xīnnián Kuàilè! ❤︎⁠ Happy New Year!
   </div>
 
 </div> <!-- end .main-container -->
